{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 30,
  "lineage": "20931e7e-30f5-dca7-a79e-004f345e5497",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "precious-terraform-training-windows-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9c222e1a75c8738",
            "arn": "arn:aws:ec2:eu-west-1:074656803336:instance/i-00e1fb7f02defefcf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e1fb7f02defefcf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair-precious",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03eee237477eab435",
            "private_dns": "ip-172-31-1-103.eu-west-1.compute.internal",
            "private_ip": "172.31.1.103",
            "public_ip": "34.241.240.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014c9aed793a19681",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b8673ff3f11f434",
            "tags": {
              "Name": "precious-terraform-training-windows-server",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "tags_all": {
              "Name": "precious-terraform-training-windows-server",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d465c798fd07ea91"
            ]
          },
          "dependencies": [
            "aws_vpc.precious-terraform-training-vpc",
            "aws_security_group.precious-terraform-training-ALB-SG",
            "aws_security_group.precious-terraform-training-SG",
            "aws_subnet.precious-terraform-training-subnet1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "precious-terraform-training-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:074656803336:internet-gateway/igw-0f50117347505a507",
            "id": "igw-0f50117347505a507",
            "owner_id": "074656803336",
            "tags": {
              "Name": "precious-terraform-training-igw",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "tags_all": {
              "Name": "precious-terraform-training-igw",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "vpc_id": "vpc-0e5e364c38930c677"
          },
          "dependencies": [
            "aws_vpc.precious-terraform-training-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "precious-terraform-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:074656803336:loadbalancer/app/precious-terraform-loadbalancer/fece9253f0bdbf43",
            "arn_suffix": "app/precious-terraform-loadbalancer/fece9253f0bdbf43",
            "dns_name": "precious-terraform-loadbalancer-877769315.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:074656803336:loadbalancer/app/precious-terraform-loadbalancer/fece9253f0bdbf43",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "precious-terraform-loadbalancer",
            "security_groups": [
              "sg-05475c3207b16479e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f54d57c81845a8f"
              },
              {
                "subnet_id": "subnet-03b8673ff3f11f434"
              }
            ],
            "subnets": [
              "subnet-02f54d57c81845a8f",
              "subnet-03b8673ff3f11f434"
            ],
            "tags": {
              "Name": "precious-terraform-training-loadbalancer",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "tags_all": {
              "Name": "precious-terraform-training-loadbalancer",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "vpc_id": "vpc-0e5e364c38930c677",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_vpc.precious-terraform-training-vpc",
            "aws_security_group.precious-terraform-training-ALB-SG",
            "aws_subnet.precious-terraform-training-subnet1",
            "aws_subnet.precious-terraform-training-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "precious-terraform-training-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:074656803336:listener/app/precious-terraform-loadbalancer/fece9253f0bdbf43/9e04b83bfa1fbd4f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:074656803336:targetgroup/precious-tf-alb-target-group/66db898b60467096",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:074656803336:listener/app/precious-terraform-loadbalancer/fece9253f0bdbf43/9e04b83bfa1fbd4f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:074656803336:loadbalancer/app/precious-terraform-loadbalancer/fece9253f0bdbf43",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.precious-terraform-training-ALB-SG",
            "aws_subnet.precious-terraform-training-subnet1",
            "aws_subnet.precious-terraform-training-subnet2",
            "aws_vpc.precious-terraform-training-vpc",
            "aws_lb.precious-terraform-loadbalancer",
            "aws_lb_target_group.precious-tf-alb-target-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "precious-tf-alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:074656803336:targetgroup/precious-tf-alb-target-group/66db898b60467096",
            "arn_suffix": "targetgroup/precious-tf-alb-target-group/66db898b60467096",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:074656803336:targetgroup/precious-tf-alb-target-group/66db898b60467096",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "precious-tf-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "precious-tf-alb-target-group",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "tags_all": {
              "Name": "precious-tf-alb-target-group",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e5e364c38930c677"
          },
          "dependencies": [
            "aws_vpc.precious-terraform-training-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "precious-tf-alb-target-group-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:074656803336:targetgroup/precious-tf-alb-target-group/66db898b60467096-20211015174656092000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:074656803336:targetgroup/precious-tf-alb-target-group/66db898b60467096",
            "target_id": "i-00e1fb7f02defefcf"
          },
          "dependencies": [
            "aws_security_group.precious-terraform-training-ALB-SG",
            "aws_security_group.precious-terraform-training-SG",
            "aws_subnet.precious-terraform-training-subnet1",
            "aws_vpc.precious-terraform-training-vpc",
            "aws_instance.precious-terraform-training-windows-server",
            "aws_lb_target_group.precious-tf-alb-target-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "precious-terraform-training-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:074656803336:route-table/rtb-01549c5bf0560ef9d",
            "id": "rtb-01549c5bf0560ef9d",
            "owner_id": "074656803336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f50117347505a507",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "precious-terraform-training-routetable",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "tags_all": {
              "Name": "precious-terraform-training-routetable",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e364c38930c677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.precious-terraform-training-igw",
            "aws_vpc.precious-terraform-training-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "precious-terraform-training-route-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06312f13f25541521",
            "route_table_id": "rtb-01549c5bf0560ef9d",
            "subnet_id": "subnet-03b8673ff3f11f434"
          },
          "dependencies": [
            "aws_internet_gateway.precious-terraform-training-igw",
            "aws_route_table.precious-terraform-training-routetable",
            "aws_subnet.precious-terraform-training-subnet1",
            "aws_vpc.precious-terraform-training-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "precious-terraform-training-route-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bf0c07793e6969e",
            "route_table_id": "rtb-01549c5bf0560ef9d",
            "subnet_id": "subnet-02f54d57c81845a8f"
          },
          "dependencies": [
            "aws_internet_gateway.precious-terraform-training-igw",
            "aws_route_table.precious-terraform-training-routetable",
            "aws_subnet.precious-terraform-training-subnet2",
            "aws_vpc.precious-terraform-training-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "precious-terraform-training-ALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:074656803336:security-group/sg-05475c3207b16479e",
            "description": "precious-terraform-training-SG to allow internet access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05475c3207b16479e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http access to ec2",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "precious-terraform-training-ALB-SG",
            "name_prefix": "",
            "owner_id": "074656803336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "precious-terraform-training-ALB-SG",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "tags_all": {
              "Name": "precious-terraform-training-ALB-SG",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e364c38930c677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.precious-terraform-training-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "precious-terraform-training-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:074656803336:security-group/sg-0d465c798fd07ea91",
            "description": "precious-terraform-training-SG to allow internet access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d465c798fd07ea91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "rdp access to ec2",
                "from_port": 3389,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [],
                "description": "Http access to ec2",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05475c3207b16479e"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05475c3207b16479e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "precious-terraform-training-SG",
            "name_prefix": "",
            "owner_id": "074656803336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "precious-terraform-training-SG",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "tags_all": {
              "Name": "precious-terraform-training-SG",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e364c38930c677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.precious-terraform-training-vpc",
            "aws_security_group.precious-terraform-training-ALB-SG"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "precious-terraform-training-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:074656803336:subnet/subnet-03b8673ff3f11f434",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.31.0.0/22",
            "id": "subnet-03b8673ff3f11f434",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074656803336",
            "tags": {
              "Name": "precious-terraform-training-subnet1",
              "env": "precious-training"
            },
            "tags_all": {
              "Name": "precious-terraform-training-subnet1",
              "env": "precious-training"
            },
            "vpc_id": "vpc-0e5e364c38930c677"
          },
          "dependencies": [
            "aws_vpc.precious-terraform-training-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "precious-terraform-training-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:074656803336:subnet/subnet-02f54d57c81845a8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.31.4.0/22",
            "id": "subnet-02f54d57c81845a8f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074656803336",
            "tags": {
              "Name": "precious-terraform-training-subnet2",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "tags_all": {
              "Name": "precious-terraform-training-subnet2",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "vpc_id": "vpc-0e5e364c38930c677"
          },
          "dependencies": [
            "aws_vpc.precious-terraform-training-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "precious-terraform-training-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:074656803336:vpc/vpc-0e5e364c38930c677",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-018d84c959578e6c4",
            "default_route_table_id": "rtb-0e5c2d2f7df71a2e0",
            "default_security_group_id": "sg-0ec84b610205ee851",
            "dhcp_options_id": "dopt-acfdb2ca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e5e364c38930c677",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e5c2d2f7df71a2e0",
            "owner_id": "074656803336",
            "tags": {
              "Name": "precious-terraform-training-vpc",
              "env": "precious-terraform-training",
              "owner": "precious"
            },
            "tags_all": {
              "Name": "precious-terraform-training-vpc",
              "env": "precious-terraform-training",
              "owner": "precious"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}